fixed infinite horizontal scroll

--- a/client/src/Styles/Partials/_tasks.scss
+++ b/client/src/Styles/Partials/_tasks.scss
@@ -2,6 +2,7 @@
     background-color: white;
     width: 240px;
     min-height: 20px;
+    white-space: pre-wrap;
     border-radius: 4px;
     padding: 1.2%;
     color: black;
